# led-sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Sender.py  scoreboard.cc
assets/scenes/: sandbox.json
config/: led-display.toml
flask_server/: flask_server.py  main.py  scene_publisher.py  test_json_ingestion.sh
flask_server/test_data/: scene_broke.json  scene_test.json
include/sandbox/: Application.hpp  ApplicationConfig.hpp  LedDisplay.hpp  Scene.hpp  SceneFolderMonitor.hpp  SceneParser.hpp
include/sandbox/comms/: DisplayIpcServer.hpp  RestApiServer.hpp
include/sandbox/config/: ApplicationConfig.hpp
include/sandbox/utils/: Constants.hpp  FontLibrary.hpp
include/sandbox/web/: SceneMailbox.hpp  WebSceneServer.hpp
src/: main.cpp
src/sandbox/: Application.cpp  ApplicationConfig.cpp  LedDisplay.cpp  SceneFolderMonitor.cpp  SceneParser.cpp
src/sandbox/comms/: DisplayIpcServer.cpp  RestApiServer.cpp
src/sandbox/config/: ApplicationConfig.cpp
src/sandbox/web/: WebSceneServer.cpp
tools/: kill_ipc_socket.sh
web/: app.js  index.html  styles.css
